11_Integrating_a_Server_Side_Rendered_React_App/k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - pathType: Prefix
            path: /api/users/
            backend:
              service:
                name: auth-svc
                port:
                  number: 3000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: client-svc
                port:
                  number: 3000
